Version 1.5.1+svn:
 * campaigns:
 * formula AI:
   * Added variant_iterator to iterate over variant elements
   * Modified choose, filter, find and map functions to use variant_iterator, 
     so they work correctly with a variant_map type
 * language and i18n:
   * updated translations: Finnish, German, Greek, Lithuanian, Serbian
 * WML engine:
   * When examining stored units, now the attacks, max_hitpoints, max_moves,
     and max_experience are the "real" values and can also be modified.
 * GUI improvements:
   * Rewrote the textbox history saving of the new widget library. This rewrite
     is incompatible with the old version, but since the library is still in
     development, no compatibility layer has been added.
   * Added gui to choose where server binary is
   * Added type-a-head search to file chooser dialog
 * multiplayer:
   * Added support for multiple sides per client in MP start
   * Added support for reserving slots when reloading game
   * Fixed timer end warning not to play in opponents turn (bug: #11517)
   * Teams are now translated localy for all clients (bug: #3676)
 * miscellaneous and bug fixes:
   * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
   * Fixed statitics not add turn data from previus scenarios (bug: #11719)
   * Removed persistance from team configuration (bug: #10916)

Version 1.5.1:
 * campaigns:
   * Descent into Darkness:
     * fixed a crash in 'Return to Parthyn'
   * Eastern Invasion:
     * fixed a crash in 'Xenophobia'
   * Heir to the Throne:
     * allowed Kalenz to take the flaming sword
   * The Rise of Wesnoth:
     * fixed the Wesfolk Outcast line's distract ability not working
     * increased the gold you get from not letting Lady Outlaw join you in the
       second scenario
     * removed the outlaw princess and outlaw queen and instead made Jessica
       only have one unit line
   * Son of the Black Eye:
     * fixed a crash in 'Dwarvish Stand'
   * An Orcish Incursion