@@ -76,6 +76,7 @@ border_size=1
         type=Fighter
         id=student
         name=_"Konrad"
+        current_player=_"Konrad"
         canrecruit=yes
         side=1
         controller=human
@@ -492,20 +493,20 @@ Now, this quintain gets 5 chances to hit you for 3 damage each. If it hits every
                     id=Delfador
                     message=_ "There is a village on the other side of the river. Visiting villages is a good idea, and ending your turn in one will heal you. To the village!"
                 [/message]
-				#wmlindent: start ignoring
-				{GENDER ({PRINT (_"Left click on Konrad")})
-						({PRINT (_"Left click on Li'sar")})}
-				#wmlindent: stop ignoring
+                #wmlindent: start ignoring
+                {GENDER ({PRINT (_"Left click on Konrad")})
+                        ({PRINT (_"Left click on Li'sar")})}
+                #wmlindent: stop ignoring
                 [event]
                     name=select
                     [filter]
                         side=1
                     [/filter]
 
-					#wmlindent: start ignoring
-						{GENDER ({PRINT (_"Click on the village to move Konrad")})
-								({PRINT (_"Click on the village to move Li'sar")})}
-					#wmlindent: stop ignoring
+                    #wmlindent: start ignoring
+                        {GENDER ({PRINT (_"Click on the village to move Konrad")})
+                                ({PRINT (_"Click on the village to move Li'sar")})}
+                    #wmlindent: stop ignoring
                 [/event]
 
                 {TARGET_HEX 11 7}
@@ -572,10 +573,10 @@ Now, this quintain gets 5 chances to hit you for 3 damage each. If it hits every
                     message=_ "A splendid idea. You can recruit two units if you return to the keep. You have plenty of gold for that."
                 [/message]
                 {TARGET_HEX 9 6}
-				#wmlindent: start ignoring
-				{GENDER ({PRINT (_"Move Konrad to the keep")})
-						({PRINT (_"Move Li'sar to the keep")})}
-				#wmlindent: stop ignoring
+                #wmlindent: start ignoring
+                {GENDER ({PRINT (_"Move Konrad to the keep")})
+                        ({PRINT (_"Move Li'sar to the keep")})}
+                #wmlindent: stop ignoring
                 [event]
                     name=moveto
                     [filter]
