@@ -293,6 +293,7 @@
         type=Fighter
         id=student
         name=_"Konrad"
+        current_player=_"Konrad"
         canrecruit=yes
         side=1
         gold=123
