@@ -1,5 +1,7 @@
 Version 1.5.1+svn:
  * campaigns:
+   * Tutorial
+     * Fixed players side name to same as leaders name (bug: #10114)
  * formula AI:
    * Added variant_iterator to iterate over variant elements
    * Modified choose, filter, find and map functions to use variant_iterator, 
